--- a/index.html
+++ b/index.html
@@ -9,7 +9,22 @@
 </head>
 <body>
     
-
+<div class="rect">
+    <div class="sq">
+     <button class="button1">Main<i class="fas fa-home"></i></button>
+     <button class="button2">Story<i class="fas fa-boxes"></i></button>
+     <button class="button3">Links<i class="fas fa-link"></i></button>
+     <button class="button4">About<i class="fab fa-asymmetrik"></i></button>
+     <button class="button5">Friends<i class="fas fa-users"></i></button>
+     <button class="button5">Contact<i class="fas fa-mail-bulk"></i></button>
+     <button class="button5">Transport<i class="fas fa-shipping-fast"></i></button>
+     <button class="button5">Money<i class="fas fa-search-dollar"></i></button>
+     <button class="button5">Weather<i class="fas fa-cloud-sun-rain"></i></button>
+     <button class="button5">Location<i class="fas fa-search-location"></i></button>
+     <button class="button5">Static<i class="fas fa-compress-alt"></i></button>
+     <button class="button5">Games<i class="fab fa-mailchimp"></i></button>
+    </div>
+</div>
 
 
 
