comment bar effect to mov with click t

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     </div>
 </div>
 
-
+<!-- <i class="fas fa-bars"></i> -->
+<!-- <i class="fas fa-times"></i> -->
 
     <script src="main.js"></script>
 </body>
