add hamburger icon and displa none to close

--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
      <button class="button5">Games<i class="fab fa-mailchimp"></i></button>
     </div>
 </div>
+<div class="close">
+    <i class="fas fa-bars"></i>
+    <i class="fas fa-times"></i>
+</div>
 
-<!-- <i class="fas fa-bars"></i> -->
-<!-- <i class="fas fa-times"></i> -->
+
 
     <script src="main.js"></script>
 </body>
